fix collapsing css replications

--- a/style.css
+++ b/style.css
@@ -16,6 +16,7 @@ body {
 
 .section {
   position: relative;
+  height: auto;
 }
 
 #title {
@@ -604,7 +605,7 @@ body {
 
 @media screen and (max-width: 768px) {
   .repWrap {
-    position: absolute;
+    position: relative;
     height: 100%;
     align-items: center;
     display: flex;
@@ -612,12 +613,14 @@ body {
     margin: 0;
   }
   .repImg {
-    width: 50%;
+    width: 70%;
     background-size: contain;
     text-align: center;
     margin-left: auto;
     margin-right: auto;
     position: relative;
+    border: transparent;
+    justify-content: center;
   }
   .repTitleWrap {
     position: relative;
@@ -633,7 +636,6 @@ body {
   .repButtonWrap {
     margin-top: 5px;
     visibility: hidden;
-
   }
   .repButtonCircle {
     visibility: hidden;
@@ -651,10 +653,12 @@ body {
     z-index: 1;
   }
   .repDesc{
+    position: relative;
     text-align: center;
     margin-left: auto;
     margin-right: auto;
     width: 80%;
+    height: auto;
   }
   .repSmallTitle {
     text-align: center;
@@ -664,6 +668,10 @@ body {
   }
   .repTechnologiesLink {
     margin: 0 auto;
+  }
+  .repLinkWrap {
+    position: relative;
+    justify-content: center;
   }
 
 }
